# KPI-ALL

./: IP-11_Holovnia.docx  README.md
First_year/: meta  АСД.docx  meta OP.docx
First_year/Algorithms and data structures(1 sem)/: MKP.docx  мкр 2.docx  мкр2.vsdx
First_year/Algorithms and data structures(2sem)/: 1 lab.docx
First_year/Basics of comp systems and networks/: META.docx  lab 1.docx  lab 2.docx  lab 3.docx  lab 4.docx
First_year/Components of software engineering/: Диаграмма без названия.drawio  ЛАБА 2 вар 7 Головня Саша.docx  ЛАБА 3 вар 7 Головня Саша.docx  ЛАБА 4 вар 7 Головня Саша.docx  ЛАБА 5 вар 7 Головня Саша.docx
First_year/Healthy Basics/: Schoden Holovnia Sasha.doc
First_year/History/: МКР.docx  Неолітична революція слова.docx  Семінар 3.docx  Семінар 3.pptx  Семінар 5.docx  Семінар 5.pptx  Семінар 6.docx  Семінар 6.pptx  Семінар 7.docx  Семінар 7.pptx  Семінар 8.docx  табл 5.docx
First_year/Ukrainian(1sem)/: 7 вар Головня Саша.docx  Var 1 Holovnia.docx  ІП-11 Головня Саша Варіант 1.txt  Дискусія - аргумент.docx  Доклад 2 ВІЗИТКА.docx  ЕСЕ ІП-11 Головня Саша.docx  Енохіанська мова.docx  Рецензія.docx  СРС 3.docx  СРС 4.docx  СРС 5.docx  СРС 6.docx  СРС 7.docx  СРС 8.docx  СРС 9.docx  мкр.docx
First_year/ЕБЦЗ/: ІП-11 Головня О. ПР1 ЕБЦЗ.docx  ІП-11 Головня О. Пр2 ЕБЦЗ Вар.7.pptx  (+5 more)
Fourth year/Software infrastructure/final/rust-lab-5/backend/: Cargo.toml  Dockerfile
Fourth year/Software infrastructure/final/rust-lab-5/backend/src/: main.rs  routes.rs
lab5/: CSP_source.ipynb  csp_ai5.py  ІП-11 Головня Саша - lab5_report_template.docx
(+794 files in other folders)
