[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10"
log = "0.4"
actix-cors = "0.6"
actix-web = "4.4"
actix-multipart = "0.6"
mongodb = { version = "2.7", features = ["tokio-runtime"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["fs"] }
lazy_static = "1.5.0"
image = "0.25.5"
